--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
     <title>
@@ -12,15 +12,60 @@
 </head>
 
 <body>
-    <p>Hello World!</p>
+    <section>
+        <h1>About Me</h1>
 
+        <p>Insert description here</p>
 
+    </section>
 
+    <section>
+        <h2>Education</h2>
 
+        <ol>
+            <li>
+                Vassar College
+                <ul>
+                    <li>highlight1</li>
+                    <li>highlight2</li>
+                    <li>highlight3</li>
+                </ul>
 
+            </li>
+            <li>
+                Chadwick School
+                <ul>
+                    <li>highlight1</li>
+                    <li>highlight2</li>
+                    <li>highlight3</li>
+                </ul>
+            </li>
+        </ol>
+    </section>
 
+    <section>
+        <h2>Experience</h2>
+        <ol>
+            <li>job1</li>
+            <li>job2</li>
+            <li>job3</li>
+        </ol>
+    </section>
 
+    <section>
+        <h2>Portfolio</h2>
+        <a href="portfolio-photos.html">My photography portfolio!</a>
+        <a href="portfolio-games.html">My game development portfolio!</a>
+    </section>
 
-
+    <section>
+        <h3>Socials</h3>
+        <ul>
+            <li>social1</li>
+            <li>social2</li>
+            <li>social3</li>
+        </ul>
+    </section>
 </body>
+
 </html>
