added working unity links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
         <ul class="course-highlights">
             <li>
-                <p><strong>Computer Science Courses</strong></p>
+                <p><strong>Computer Science Courses (Click on any to expand!)</strong></p>
                 <ul>
                     <li>
                         <p><strong>Beginner</strong> <span>⮞</span></p>
@@ -141,12 +141,12 @@
                 <h3>Software Development Group Project</h3>
                 <p id="cs203-app">As part of my CMPU 203 course at Vassar, I worked within a group of 4 to create an Android application using <em>Java</em>, <em>IntelliJ</em>, and <em>Android Studio</em> with <em>MVC</em> architecture. The application's purpose was for scheduling events, specifically designed for students with strict class schedules to work around.</p>
                     <p>My role within the group was to be one of two developers focusing on the back end, including the underlying <em>model</em> of users and schedules along with interactions between that model and the user interface using a <em>controller</em> I also was the main person working on testing (unit tests) and persistence using Google's <em>Firebase</em>.</p>
-                    <p>⇒ <a href="#">The source code for the app!</a></p>
+                    <!-- <p>⇒ <a href="#">The source code for the app!</a></p> -->
             </li>
             <li>
                 <h3>Portfolio: Github</h3>
                 <p>To view my current programming projects, including the source code for the games below, check out my GitHub account!<br>
-                    ⇒ <a href="https://github.com/jdwohl?tab=repositories"> My GitHub</a></p>
+                    ⇒ <a href="https://github.com/jdwohl?tab=repositories" target="_blank"> My GitHub</a></p>
             </li>
         </ul>
     </section>
@@ -156,14 +156,14 @@
         <ul id="storytelling-demos">
             <li>
                 <h3>Text Adventure Detective Game</h3>
-                <p>For the first game I created for <a class="course-link" data-courseid="314" href="#cs314-description">CMPU 314</a>, I wanted to create a text adventure -- games that you play by typing to move around and take action -- with a twist. My goal was to combine a text adventure with something called a <a href="#">logic puzzle</a> to create a uniquely engaging experience.</p>
-                <p>Check out the game here ⇒ <a href="#">Text Adventure</a></p>
+                <p>For the first game I created for <a class="course-link" data-courseid="314" href="#cs314-description">CMPU 314</a>, I wanted to create a text adventure -- games that you play by typing to move around and take action -- with a twist. My goal was to combine a text adventure with something called a <a href="https://logic.puzzlebaron.com/" target="_blank">logic grid puzzle</a> to create a uniquely engaging experience.</p>
+                <p>Check out the game here ⇒ <a href="https://play.unity.com/mg/other/webgl-builds-386882" target="_blank">Text Adventure</a></p>
             </li>
             <li>
                 <h3>Fantasy Merchant Game</h3>
                 <p>In the second half of <a class="course-link" data-courseid="314" href="#cs314-description">CMPU 314</a>, I wanted to create the prologue of a game that I had been wanting to make for a long time: one where you play as a merchant in a fantasy world, experiencing a grand story from that unique perspective.</p>
                 <p>Develop friendships with your customers, make choices that affect the story and your morality, gain useful information about the world and its inhabitants, and much more! This demo currently has four endings, obtained by making different choices, both obvious and subtle.</p>
-                <p>Check out the game here ⇒ <a href="#">Fantasy Merchant</a></p>
+                <p>Check out the game here ⇒ <a href="https://play.unity.com/mg/other/webgl-builds-387011" target="_blank">Fantasy Merchant</a></p>
             </li>
         </ul>
     </section>
