remove triangle characters

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p><strong>Computer Science Courses (Click on any to expand!)</strong></p>
                 <ul>
                     <li>
-                        <p><strong>Beginner</strong><span> ▶</span></p>
+                        <p><strong>Beginner</strong><span></span></p>
                         <ul id="cs-beginner">
                             <li><p><strong>CMPU 101:<br>Problem-Solving and Abstraction</strong><br>  Used the <em>Racket</em> programming language to learn basic algorithms and core CS fundamentals such as lists, recursion, and iteration.</p></li>
                             <li id="cs102-description"><p><strong>CMPU 102:<br>Data Structures and Algorithms</strong><br> Used <em>Java</em> to learn Object-Oriented Programming along with crucial data structures.</p></li>
@@ -53,7 +53,7 @@
                         </ul>
                     </li>
                     <li>
-                        <p><strong>Intermediate</strong><span> ▶</span></p>
+                        <p><strong>Intermediate</strong><span></span></p>
                         <ul id="cs-intermediate">
                             <li><p><strong>CMPU 203:<br>Software Design and Implementation</strong><br> Worked within a team to create an <a href="#cs203-app">Android application</a> using <em>Java</em> within IDE's such as <em>IntelliJ</em> and <em>Android Studio</em>.</p></li>
                             <li id="cs224-description"><p><strong>CMPU 224: Computer Organization</strong><br> Learned about how computers work behind the scenes through topics such as binary, <em>Assembly language</em>, the call stack, and much more, learning the basics of <em>C</em> along the way.</p></li>
@@ -62,7 +62,7 @@
                         </ul>
                     </li>
                     <li>
-                        <p><strong>Advanced</strong><span> ▶</span></p>
+                        <p><strong>Advanced</strong><span></span></p>
                         <ul id="cs-advanced">
                             <li id="cs314-description"><p><strong>CMPU 314:<br>Projects in Digital Media</strong><br>Used <em>C#</em> within the <em>Unity</em> game development engine to create <a href="#storytelling">two game prototypes</a> over the semester.</p></li>
                             <li><p><strong>CMPU 331:<br>Compilers</strong><br> Learned how compilers work by making our own over the course of the semester using <em>OCaml</em>, adding functionality such as loops, functions, and type-checking as well as adding optimizations.</p></li>
