--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <li>
                 <h3>Software Development Group Project</h3>
                 <p id="cs203-app">As part of my CMPU 203 course at Vassar, I worked within a group of 4 to create an Android application using <em>Java</em>, <em>IntelliJ</em>, and <em>Android Studio</em> with <em>MVC</em> architecture. The application's purpose was for scheduling events, specifically designed for students with strict class schedules to work around.</p>
-                    <p>My role within the group was to be one of two developers focusing on the back end, including the underlying <em>model</em> of users and schedules along with interactions between that model and the user interface using a <em>controller</em> I also was the main person working on testing (unit tests) and persistence using Google's <em>Firebase</em>.</p>
+                    <p>My role within the group was to be one of two developers focusing on the back end, including the underlying <em>model</em> of users and schedules along with interactions between that model and the user interface using the <em>controller</em> pattern. I also was the main person working on testing (unit tests) and persistence using Google's <em>Firebase</em>.</p>
                     <!-- <p>⇒ <a href="#">The source code for the app!</a></p> -->
             </li>
             <li>
