updated background colors and link color

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                             <li><p><strong>CMPU 203:<br>Software Design and Implementation</strong><br> Worked within a team to create an <a href="#cs203-app">Android application</a> using <em>Java</em> within IDE's such as <em>IntelliJ</em> and <em>Android Studio</em>.</p></li>
                             <li id="cs224-description"><p><strong>CMPU 224: Computer Organization</strong><br> Learned about how computers work behind the scenes through topics such as binary, <em>Assembly language</em>, the call stack, and much more, learning the basics of <em>C</em> along the way.</p></li>
                             <li><p><strong>CMPU 240:<br>Theory of Computation</strong><br> Developed an understanding of more advanced CS theory concepts such as context free grammars, push-down automata, and Turing machines.</p></li>
-                            <li><p><strong>CMPU 241:<br>Analysis of Algorithms</strong><br> Learned about advanced <em>algorithms</em> through topics such as sorting, searching trees, and more along with more complex data structures like red-black trees.</p></li>
+                            <li><p><strong>CMPU 241:<br>Analysis of Algorithms</strong><br> Learned about advanced <em>algorithms</em> through topics such as sorting, searching trees, and more, along with more complex data structures like red-black trees.</p></li>
                         </ul>
                     </li>
                     <li>
                         <p><strong>Advanced</strong><span></span></p>
                         <ul id="cs-advanced">
                             <li id="cs314-description"><p><strong>CMPU 314:<br>Projects in Digital Media</strong><br>Used <em>C#</em> within the <em>Unity</em> game development engine to create <a href="#storytelling">two game prototypes</a> over the semester.</p></li>
-                            <li><p><strong>CMPU 331:<br>Compilers</strong><br> Learned how compilers work by making our own over the course of the semester using <em>OCaml</em>, adding functionality such as loops, functions, and type-checking as well as adding optimizations.</p></li>
+                            <li><p><strong>CMPU 331:<br>Compilers</strong><br> Learned how compilers work by building one over the course of the semester using <em>OCaml</em>, gradually adding functionality such as loops, functions, and type-checking, along with various optimizations.</p></li>
                             <li><p><strong>CMPU 334:<br>Operating Systems</strong><br> Systems Learned about how <em>Operating Systems</em> work behind the scenes, using the Linux kernel as a model. Topics covered include multilevel feedback queues, memory management, and file systems.</p></li>
                             <li><p><strong>CMPU 377:<br>Parallel Programming</strong><br> Developed skills in using parallel programming techniques in different languages such as <em>C</em>, <em>Java</em>, <em>Go</em>, and <em>Ruby</em>, along with the theoretical foundations of these parallel concepts such as Mutual Exclusion, Locks, Semaphores, and Tuple Spaces.</p></li>
                         </ul>
@@ -171,7 +171,8 @@
     <section id="contactme">
         <h3>Contact me!</h3>
         <address>
-            Email: <a href="mailto:jonathandwohl@gmail.com" target="_blank">jonathandwohl@gmail.com</a>
+            <p>Email: <a href="mailto:jonathandwohl@gmail.com" target="_blank">jonathandwohl@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/jonathan-wohl-047a24248/" target="_blank">https://www.linkedin.com/in/jonathan-wohl-047a24248/</a></p>
         </address>
     </section>
 </body>
