edited coursebox style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </h3>
         <ul class="course-highlights">
             <li>
-                <p>Computer Science Courses (Click to expand!)</p>
+                <p>Computer Science Courses<br><span>(Click below to expand!)</span></p>
                 <ul>
                     <li>
                         <p>Beginner</p>
