--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li data-section="programming">Programming</li>
             <li data-section="storytelling">Storytelling</li>
         </ul>
-        <p>Click on a box to jump to that section!</p>
+        <p>Click on a box to jump to that section</p>
 
     </section>
 
@@ -42,7 +42,7 @@
         </h3>
         <ul class="course-highlights">
             <li>
-                <p>Computer Science Courses<br><span>(Click below to expand!)</span></p>
+                <p>Computer Science Courses<br><span>(Click below to expand)</span></p>
                 <ul>
                     <li>
                         <p>Beginner</p>
